--- a/STCloud/nbproject/project.properties
+++ b/STCloud/nbproject/project.properties
@@ -27,9 +27,9 @@ dist.war=${dist.dir}/${war.name}
 endorsed.classpath=\
     ${libs.javaee-endorsed-api-6.0.classpath}
 excludes=
-file.reference.commons-fileupload-1.3.1.jar=../../../Downloads/Compressed/commons-fileupload-1.3.1-bin/commons-fileupload-1.3.1-bin/lib/commons-fileupload-1.3.1.jar
-file.reference.commons-net-3.3-sources.jar=../../../Downloads/Compressed/commons-net-3.3-bin/commons-net-3.3/commons-net-3.3-sources.jar
-file.reference.commons-net-3.3.jar=../../../Downloads/Compressed/commons-net-3.3-bin/commons-net-3.3/commons-net-3.3.jar
+file.reference.commons-fileupload-1.3.1.jar=lib\\commons-fileupload-1.3.1.jar
+file.reference.commons-net-3.3-sources.jar=lib\\commons-net-3.3-sources.jar
+file.reference.commons-net-3.3.jar=lib\\commons-net-3.3.jar
 file.reference.mysql-connector-java-5.1.22-bin.jar=lib\\mysql-connector-java-5.1.22-bin.jar
 includes=**
 j2ee.compile.on.save=true
@@ -45,12 +45,12 @@ j2ee.platform.wsit.classpath=
 j2ee.server.type=gfv3ee6
 jar.compress=false
 javac.classpath=\
-    ${file.reference.commons-fileupload-1.3.1.jar}:\
-    ${file.reference.commons-net-3.3.jar}:\
-    ${file.reference.commons-net-3.3-sources.jar}:\
     ${file.reference.mysql-connector-java-5.1.22-bin.jar}:\
     ${libs.hibernate-support.classpath}:\
-    ${libs.primefaces.classpath}
+    ${libs.primefaces.classpath}:\
+    ${file.reference.commons-fileupload-1.3.1.jar}:\
+    ${file.reference.commons-net-3.3.jar}:\
+    ${file.reference.commons-net-3.3-sources.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
