--- a/STCloud/nbproject/project.properties
+++ b/STCloud/nbproject/project.properties
@@ -28,6 +28,8 @@ endorsed.classpath=\
     ${libs.javaee-endorsed-api-6.0.classpath}
 excludes=
 file.reference.commons-fileupload-1.3.1.jar=lib\\commons-fileupload-1.3.1.jar
+file.reference.commons-io-2.4-javadoc.jar=lib\\commons-io-2.4-javadoc.jar
+file.reference.commons-io-2.4.jar=lib\\commons-io-2.4.jar
 file.reference.commons-net-3.3-sources.jar=lib\\commons-net-3.3-sources.jar
 file.reference.commons-net-3.3.jar=lib\\commons-net-3.3.jar
 file.reference.mysql-connector-java-5.1.22-bin.jar=lib\\mysql-connector-java-5.1.22-bin.jar
@@ -50,7 +52,9 @@ javac.classpath=\
     ${libs.primefaces.classpath}:\
     ${file.reference.commons-fileupload-1.3.1.jar}:\
     ${file.reference.commons-net-3.3.jar}:\
-    ${file.reference.commons-net-3.3-sources.jar}
+    ${file.reference.commons-net-3.3-sources.jar}:\
+    ${file.reference.commons-io-2.4.jar}:\
+    ${file.reference.commons-io-2.4-javadoc.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
