--- a/STCloud/nbproject/project.properties
+++ b/STCloud/nbproject/project.properties
@@ -54,7 +54,8 @@ javac.classpath=\
     ${file.reference.commons-net-3.3.jar}:\
     ${file.reference.commons-net-3.3-sources.jar}:\
     ${file.reference.commons-io-2.4.jar}:\
-    ${file.reference.commons-io-2.4-javadoc.jar}
+    ${file.reference.commons-io-2.4-javadoc.jar}:\
+    ${libs.iText.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
